--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -16,7 +16,7 @@
 {% block title %}云主机详情{% endblock %}
 
 {% block boby %}
-    <div class="offset-lg-1 col-lg-10">
+    <div class="container-fluid offset-lg-1 col-lg-10">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>云主机详情</strong></span>
