--- a/image/templates/image_list.html
+++ b/image/templates/image_list.html
@@ -8,16 +8,18 @@
 {% block title %}镜像列表{% endblock %}
 
 {% block boby %}
-    <div class="col-md-offset-1 col-md-10 col-lg-10">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <span class="panel-title"><strong>镜像列表 ({{ count }})</strong></span>
+    <div class="offset-md-1 col-md-10">
+        <div class="card">
+            <div class="card-header">
+                <span class="card-title"><strong>镜像列表 ({{ count }})</strong></span>
             </div>
-            <div class="panel-body">
+            <div class="card-body">
                 <form role="form" class="form-horizontal" method="get" action="">
                     <div class="input-group" style="">
-                        <label class="input-group-addon" for="id-center">分中心</label>
-                        <select name="center" class="form-control" id="id-center">
+                        <div class="input-group-prepend">
+                            <label class="input-group-text" for="id-center">分中心</label>
+                        </div>
+                        <select name="center" class="custom-select" id="id-center">
                             <option value="">--</option>
                             {% for c in centers %}
                                 <option value="{{ c.id }}" {% if c.id == center_id %}selected{% endif %}>
@@ -25,30 +27,36 @@
                                 </option>
                             {% endfor %}
                         </select>
-                        <label class="input-group-addon" for="id-tag">标签</label>
-                        <select name="tag" class="form-control" id="id-tag">
+                        <div class="input-group-prepend">
+                            <label class="input-group-text"  for="id-tag">标签</label>
+                        </div>
+                        <select name="tag" class="custom-select" id="id-tag">
                             <option value="">--</option>
                             {% for val, name in tags %}
                                 <option value="{{ val }}" {% if val == tag_value %}selected {% endif %}>{{ name }}</option>
                             {% endfor %}
                         </select>
-                        <label class="input-group-addon" for="id-sys-type">系统类型</label>
-                        <select name="sys_type" class="form-control" id="id-sys-type">
+                        <div class="input-group-prepend">
+                            <label class="input-group-text" for="id-sys-type">系统类型</label>
+                        </div>
+                        <select name="sys_type" class="custom-select" id="id-sys-type">
                             <option value="">--</option>
                             {% for val, name in sys_types %}
                                 <option value="{{ val }}" {% if val == sys_type_value %}selected {% endif %}>{{ name }}</option>
                             {% endfor %}
                         </select>
-                        <label class="input-group-addon">关键字</label>
+                        <div class="input-group-prepend">
+                            <label class="input-group-text">关键字</label>
+                        </div>
                         <input type="text" class="form-control" name="search" value="{{ search }}"
                                placeholder="搜 名称、备注"/>
-                        <span class="input-group-addon"></span>
                         <button type="submit" class="btn btn-primary form-control">筛选</button>
                     </div>
                 </form>
             </div>
-            <table class="table table-vm-list" style="word-wrap:break-word;word-break:break-all;">
-                <tr class="bg-info">
+            <table class="table table-hover table-vm-list" style="word-wrap:break-word;word-break:break-all;">
+                <thead class="thead-light">
+                <tr>
                     <th>名称</th>
                     <th>版本信息</th>
                     <th>系统类型</th>
@@ -56,6 +64,8 @@
                     <th>创建时间</th>
                     <th>备注</th>
                 </tr>
+                </thead>
+                <tbody>
                 {% for image in images %}
                     <tr id="tr_{{ image.id }}">
                         <td title="{{ image.id }}"><a href="#"><b>{{ image.name }}</b></a></td>
@@ -79,32 +89,33 @@
                         </td>
                     </tr>
                 {% endfor %}
+                </tbody>
             </table>
-            <div class="panel-footer">
+            <div class="card-footer">
                 <nav aria-label="Page navigation">
                     <ul class="pagination"  style="margin:0;">
                         {% with page_list=page_nav.page_list previous=page_nav.previous next=page_nav.next %}
                             {% if page_list %}
                                 {% if previous %}
-                                    <li><a href="?{{ previous }}" aria-label="Previous"><span
+                                    <li class="page-item"><a class="page-link" href="?{{ previous }}" aria-label="Previous"><span
                                             aria-hidden="true">&laquo;</span></a></li>
                                 {% else %}
-                                    <li class="disable"><span aria-hidden="true">&laquo;</span></li>
+                                    <li class="page-item disable"><span class="page-link" aria-hidden="true">&laquo;</span></li>
                                 {% endif %}
                             {% endif %}
                             {% for disp, query, active in page_list %}
                                 {% if active %}
-                                    <li class="active"><a href="?{{ query }}">{{ disp }}</a></li>
+                                    <li class="page-item active"><a class="page-link" href="?{{ query }}">{{ disp }}</a></li>
                                 {% else %}
-                                    <li><a href="?{{ query }}">{{ disp }}</a></li>
+                                    <li class="page-item"><a class="page-link" href="?{{ query }}">{{ disp }}</a></li>
                                 {% endif %}
                             {% endfor %}
                             {% if page_list %}
                                 {% if next %}
-                                    <li><a href="?{{ next }}" aria-label="Next"><span
+                                    <li class="page-item"><a class="page-link" href="?{{ next }}" aria-label="Next"><span
                                             aria-hidden="true">&raquo;</span></a></li>
                                 {% else %}
-                                    <li class="disable"><span aria-hidden="true">&raquo;</span></li>
+                                    <li class="page-item disable"><span class="page-link" aria-hidden="true">&raquo;</span></li>
                                 {% endif %}
                             {% endif %}
                         {% endwith %}
