--- a/network/templates/vlan_show.html
+++ b/network/templates/vlan_show.html
@@ -8,16 +8,17 @@
 {% block title %}IP列表{% endblock %}
 
 {% block boby %}
-    <div class="col-md-offset-1 col-md-10 col-lg-10">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <span class="panel-title"><strong>IP列表</strong></span>
-                <span><a class="btn btn-xs btn-primary pull-right" href="{% url 'network:vlan_show' %}?vlan_id={{ vlan_id }}">
-                    <span class="glyphicon glyphicon-download-alt"></span> 导出配置文件
+    <div class="offset-md-1 col-md-10">
+        <div class="card">
+            <div class="card-header">
+                <span class="card-title"><strong>IP列表</strong></span>
+                <span><a class="btn btn-sm btn-primary float-right" href="{% url 'network:vlan_show' %}?vlan_id={{ vlan_id }}">
+                    <i class="fa fa-download"></i> 导出配置文件
                 </a></span>
             </div>
-            <div class="panel-body" style="min-height: 400px;">
+            <div class="card-body" style="min-height: 400px;">
                 <table class="table table-vm-list" style="word-wrap:break-word;word-break:break-all;">
+                    <thead class="thead-light">
                     <tr>
                         <th>编号</th>
                         <th>IP</th>
@@ -25,6 +26,8 @@
                         <th>主机编号</th>
                         <th>状态</th>
                     </tr>
+                    </thead>
+                    <tbody>
                     {% for macip in macips %}
                     <tr>
                         <th>{{ macip.id }}</th>
@@ -39,6 +42,7 @@
                         {% endif %}
                     </tr>
                     {% endfor %}
+                    </tbody>
                 </table>
             </div>
         </div>
