--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -8,13 +8,14 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="col-md-offset-2 col-md-8 col-lg-8">
+    <div class="container-fluid offset-md-1 offset-lg-2 col-md-10 col-lg-8">
         <p class="h3">资源分配统计</p>
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                <h3 class="panel-title">分中心</h3>
+        <div class="card border-info">
+            <div class="card-header">
+                <h3 class="card-title">分中心</h3>
             </div>
             <table class="table">
+                <thead class="thead-light">
                 <tr>
                     <th>分中心</th>
                     <th>总cpu(/核)</th>
@@ -25,6 +26,8 @@
                     <th>内存使用率</th>
                     <th>云主机数</th>
                 </tr>
+                </thead>
+                <tbody>
                 {% for c in centers %}
                     <tr>
                         <td><a href="{% url 'reports:reports-center' id=c.id %}">{{c.name}}</a></td>
@@ -37,13 +40,15 @@
                         <td>{{c.vm_created}}</td>
                     </tr>
                 {% endfor %}
+                </tbody>
             </table>
         </div>
-        <div class="panel panel-danger">
-            <div class="panel-heading">
-                <h3 class="panel-title">宿主机组</h3>
+        <div class="card border-danger">
+            <div class="card-header">
+                <h3 class="card-title">宿主机组</h3>
             </div>
             <table class="table">
+                <thead class="thead-light">
                 <tr>
                     <th>宿主机组</th>
                     <th>分中心</th>
@@ -55,6 +60,8 @@
                     <th>内存使用率</th>
                     <th>云主机数</th>
                 </tr>
+                </thead>
+                <tbody>
                 {% for c in groups %}
                     <tr>
                         <td><a href="{% url 'reports:reports-group' id=c.id %}">{{c.name}}</a></td>
@@ -68,13 +75,15 @@
                         <td>{{c.vm_created}}</td>
                     </tr>
                 {% endfor %}
+                </tbody>
             </table>
         </div>
-        <div class="panel panel-success">
-            <div class="panel-heading">
-                <h3 class="panel-title">宿主机</h3>
+        <div class="card border-success">
+            <div class="card-header">
+                <h3 class="card-title">宿主机</h3>
             </div>
             <table class="table">
+                <thead class="thead-light">
                 <tr>
                     <th>宿主机IP</th>
                     <th>机组</th>
@@ -86,6 +95,8 @@
                     <th>内存使用率</th>
                     <th>云主机数</th>
                 </tr>
+                </thead>
+                <tbody>
                 {% for c in hosts %}
                     <tr>
                         <td>{{c.ipv4}}</td>
@@ -99,6 +110,7 @@
                         <td>{{c.vm_created}}</td>
                     </tr>
                 {% endfor %}
+                </tbody>
             </table>
         </div>
     </div>
