--- a/vdisk/templates/vdisk_create.html
+++ b/vdisk/templates/vdisk_create.html
@@ -6,18 +6,18 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="col-md-offset-3 col-md-6 col-lg-6">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <span class="panel-title">创建云硬盘</span>
-                <span><a class="btn btn-xs btn-primary pull-right" href="{% url 'vdisk:vdisk-list' %}">
+    <div class="container-fluid offset-md-2 offset-lg-3 col-md-8 col-lg-6">
+        <div class="card">
+            <div class="card-header">
+                <span class="card-title">创建云硬盘</span>
+                <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vdisk:vdisk-list' %}">
                     云硬盘列表
                 </a></span>
             </div>
-            <div class="panel-body">
+            <div class="card-body align-content-center">
                 <form class="form-horizontal" >
-                    <div class="form-group">
-                        <label for="id-center" class="col-sm-offset-1 col-sm-2 control-label">分中心</label>
+                    <div class="form-group row">
+                        <label for="id-center" class="offset-sm-1 col-sm-2 col-form-label">分中心</label>
                         <div class="col-sm-7">
                             <select name="center_id" class="form-control" id="id-center">
                                 <option value="">--</option>
@@ -29,8 +29,8 @@
                     </div>
                 </form>
                 <form class="form-horizontal" id="id-form-create">
-                    <div class="form-group">
-                        <label for="id-group" class="col-sm-offset-1 col-sm-2 control-label">机组</label>
+                    <div class="form-group row">
+                        <label for="id-group" class="offset-sm-1 col-sm-2 col-form-label">机组</label>
                         <div class="col-sm-7">
                             <select name="group_id" class="form-control" id="id-group">
                                 <option value="">--</option>
@@ -40,8 +40,8 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="id-quota" class="col-sm-offset-1 col-sm-2 control-label">存储池</label>
+                    <div class="form-group row">
+                        <label for="id-quota" class="offset-sm-1 col-sm-2 col-form-label">存储池</label>
                         <div class="col-sm-7">
                             <select name="quota_id" class="form-control" id="id-quota">
                                 <option value="">--</option>
@@ -51,8 +51,8 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="id-size" class="col-sm-offset-1 col-sm-2 control-label">容量大小</label>
+                    <div class="form-group row">
+                        <label for="id-size" class="offset-sm-1 col-sm-2 col-form-label">容量大小</label>
                         <div class="col-sm-7 form-inline">
                             {% if user.is_superuser %}
                                 <input name="size" type="text" class="form-control" id="id-size" value="100">
@@ -69,21 +69,18 @@
                             <span>GB</span>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="id-remarks" class="col-sm-offset-1 col-sm-2 control-label">备注</label>
+                    <div class="form-group row">
+                        <label for="id-remarks" class="offset-sm-1 col-sm-2 col-form-label">备注</label>
                         <div class="col-sm-7">
                             <input name="remarks" type="text" class="form-control" id="id-remarks">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
+                    <div class="form-group row">
+                        <div class="">
                             <button type="submit" class="btn btn-primary">创建</button>
                         </div>
                     </div>
                 </form>
-            </div>
-            <div class="panel-footer">
-
             </div>
         </div>
     </div>
