--- a/vms/templates/vm_edit.html
+++ b/vms/templates/vm_edit.html
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="offset-md-3 col-md-6">
+    <div class="container-fluid offset-md-1 offset-lg-3 col-md-10 col-lg-6">
         <div class="card">
             <div class="card-header">
                 <span class="card-title">修改云主机</span>
