--- a/vms/templates/vms_create.html
+++ b/vms/templates/vms_create.html
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block boby %}
-    <div class="offset-md-2 offset-lg-3 col-md-8 col-lg-6">
+    <div class="container-fluid offset-md-2 offset-lg-3 col-md-8 col-lg-6">
         <div class="card">
             <div class="card-header">
                 <span class="card-title">创建云主机</span>
