--- a/reports/templates/reports_center.html
+++ b/reports/templates/reports_center.html
@@ -12,7 +12,7 @@
             <table class="table" id="id-table-center">
                 <thead class="thead-light">
                 <tr>
-                    <th>总cpu(/核)</th>
+                    <th>总虚拟cpu(/核)</th>
                     <th>已分配cpu(/核)</th>
                     <th>cpu分配率</th>
                     <th>总内存</th>
@@ -31,7 +31,7 @@
                     <thead class="thead-light">
                     <tr>
                         <th>宿主机组</th>
-                        <th>总cpu(/核)</th>
+                        <th>总虚拟cpu(/核)</th>
                         <th>已分配cpu(/核)</th>
                         <th>cpu分配率</th>
                         <th>总内存</th>
