--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,32 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-4.4.1/css/bootstrap.min.css' %}">
 	{% block head %}{% endblock %}
 	<title>{% block title %}{% endblock %}</title>
+    <style>
+        html{
+            height: 100%;
+        }
+        body{
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        .page-header{
+            flex: 0 0 auto;
+        }
+        .page-content {
+            flex: 1 0 auto;
+            padding-top: 5px;
+        }
+        .page-footer{
+            background: #ececec;
+            flex: 0 0 auto;
+            {#height:60px;#}
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<div class="page-header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">EVCloud</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,10 +79,11 @@
             </ul>
         </div>
     </nav>
-    <div style="padding-top: 60px;padding-bottom: 60px;">
+</div>
+    <div class="page-content">
         {% block boby %}{% endblock %}
     </div>
-    <footer class="fixed-bottom text-center" style="background: #dddddd">
+    <footer class="page-footer text-center">
         <p><a href="http://www.cnic.cas.cn/">中国科学院计算机网络信息中心</a> 科技云部</p>
     </footer>
     <script type="text/javascript" src="{% static 'jquery/jquery-3.4.1.min.js' %}"></script>
