网页小修改

--- a/vms/templates/vms_list.html
+++ b/vms/templates/vms_list.html
@@ -119,7 +119,7 @@
                                 </span>
                             </div>
                         </td>
-                        <td><span id="vm_status_{{ vm.hex_uuid }}"><img src="{% static 'images/loading34.gif' %}" width="43px"/></span></td>
+                        <td><span id="vm_status_{{ vm.hex_uuid }}">fa fa-spinner fa-pulse</span></td>
                         <td><span id="vm_task_{{ vm.hex_uuid }}"></span></td>
 
                         <td>
