--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,8 @@
         }
         .page-content {
             flex: 1 0 auto;
-            padding-top: 5px;
+            padding-top: 10px;
+            padding-bottom: 20px;
         }
         .page-footer{
             background: #ececec;
