--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -4,58 +4,48 @@
 <html lang="zh-hans">
 <head>
     <title>登录 | 云主机平台</title>
-    <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
-    <link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}">
-    <meta name="robots" content="NONE,NOARCHIVE">
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-4.4.1/css/bootstrap.min.css' %}">
 </head>
-<body class=" login"
-      data-admin-utc-offset="28800">
-
-<!-- Container -->
-<div id="container">
-    <!-- Header -->
-    <div id="header">
-        <div id="branding">
-            <h1 id="site-name">云主机平台EVCloud</h1>
+<body>
+<div class="container-fluid">
+    <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
+        <div class="card border-info" style="min-width: 400px">
+            <div class="card-header bg-info text-center">
+                <span class="card-title h5">云主机平台EVCloud登录</span>
+            </div>
+            <div class="card-body">
+                {% if form.errors %}
+                    <div class="text-danger">{{ form.non_field_errors }}</div>
+                {% endif %}
+                <form method="post" action="{% url 'users:login' %}" id="login-form">
+                    {% csrf_token %}
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <label class="input-group-text" id="id_username" style="min-width: 80px">用户名:</label>
+                        </div>
+                        <input type="text" name="username" class="form-control" required id="id_username" placeholder="username">
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <label class="input-group-text" for="id_password" style="min-width: 80px">密 码:</label>
+                        </div>
+                        <input class="form-control" type="password" name="password" required id="id_password" placeholder="password">
+                    </div>
+                    <div >
+                        <input type="hidden" name="next" value="{{ request.GET.next }}">
+                        <input type="hidden" name="this_is_the_login_form" value="1"/>
+                    </div>
+                    <div class="form-group">
+                        <input class="btn btn-primary" type="submit" value="登录">
+                        <a class="btn text-warning" href="{% url 'users:forget' %}">忘记密码</a>
+                        <a class="btn btn-info float-right" href="{% url 'users:register' %}">注册</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <!-- END Header -->
-
-    <!-- Content -->
-    <div id="content" class="colM">
-        <div id="content-main">
-            {% if form.errors %}
-                <div class="errornote">{{ form.non_field_errors }}</div>
-            {% endif %}
-            <form method="post" action="{% url 'users:login' %}" id="login-form">
-                {% csrf_token %}
-                <div class="form-row">
-                    <label class="required" for="id_username">用户名:</label> <input type="text" name="username" autofocus
-                                                                                  required id="id_username">
-                </div>
-                <div class="form-row">
-                    <label class="required" for="id_password">密码:</label> <input type="password" name="password"
-                                                                                 required id="id_password">
-                    <input type="hidden" name="next" value="{{request.GET.next}}">
-                    <input type="hidden" name="this_is_the_login_form" value="1" />
-                </div>
-                <div class="form-row">
-                    <input type="submit" value="登录">
-                    <a class="btn text-warning" href="{% url 'users:forget' %}">忘记密码</a>
-                    <a class="btn btn-info pull-right" href="{% url 'users:register' %}">注册</a>
-                </div>
-            </form>
-        </div>
-        <br class="clear">
-    </div>
-    <!-- END Content -->
-
-    <div id="footer"></div>
 </div>
-<!-- END Container -->
-
 </body>
 </html>
+
