vm model uuid字段改为char(36)

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block boby %}
-    <div class="col-md-offset-2 col-md-8 col-lg-8">
+    <div class="offset-md-2 col-md-8 col-lg-8">
         {% if msg %}
             <span class="text-warning">{{ msg }}</span>
         {% else %}
