--- a/vms/templates/vms_list.html
+++ b/vms/templates/vms_list.html
@@ -8,7 +8,7 @@
 {% block title %}云主机列表{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-lg-1 col-lg-10">
+    <div class="container-fluid">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>云主机列表 ({{ count }})</strong></span>
