--- a/vms/templates/vms_create.html
+++ b/vms/templates/vms_create.html
@@ -52,6 +52,14 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label for="id-ipv4" class="offset-sm-1 col-sm-2 col-form-label">IP</label>
+                        <div class="col-sm-7">
+                            <select name="ipv4" class="form-control" id="id-ipv4">
+                                <option value="">自动选择</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label for="id-host" class="offset-sm-1 col-sm-2 col-form-label">宿主机</label>
                         <div class="col-sm-7">
                             <select name="host_id" class="form-control" id="id-host">
