--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -39,7 +39,7 @@
                     <div class="form-group">
                         <input class="btn btn-primary" type="submit" value="登录">
                         <a class="btn text-warning" href="{% url 'users:forget' %}">忘记密码</a>
-                        <a class="btn btn-info float-right" href="{% url 'users:register' %}">注册</a>
+                        <a class="btn btn-info float-right" onclick="alert('不允许个人注册，请联系管理员');return false;" href="{% url 'users:register' %}">注册</a>
                     </div>
                 </form>
             </div>
